--- a/src/pages/gridfinity-bin.module.css
+++ b/src/pages/gridfinity-bin.module.css
@@ -1,9 +1,3 @@
-.infoHeader {
-  margin: 0;
-  font-size: 0.8rem;
-  color: #777;
-}
-
 .downloadBtn {
   background: #6688cc;
   color: #fff;
